--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </p>
                     <div class="flex space-x-4">
                         <a href="https://github.com/Mastermind45-blip?tab=repositories" class="bg-gray-800 text-white px-4 py-2 rounded-md hover:bg-gray-700">GitHub</a>
-                        <a href="https://www.linkedin.com/in/dafa-deskaisyah-877167245" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-500">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/dafa-d/" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-500">LinkedIn</a>
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
