--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     <h3 class="font-semibold">JavaScript</h3>
                 </div>
                 <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Node.js</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
                     <h3 class="font-semibold">PHP</h3>
                 </div>
                 <div class="bg-white p-4 rounded-lg shadow-sm">
@@ -62,6 +65,9 @@
                 </div>
                 <div class="bg-white p-4 rounded-lg shadow-sm">
                     <h3 class="font-semibold">TensorFlow</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Pytorch</h3>
                 </div>
                 <div class="bg-white p-4 rounded-lg shadow-sm">
                     <h3 class="font-semibold">Scikit-Learn</h3>
@@ -77,7 +83,7 @@
 
         <section id="projects" class="mb-20">
             <h2 class="text-2xl font-bold text-gray-800 mb-6">Featured Projects</h2>
-            <div class="grid md:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-sm">
                     <h3 class="text-xl font-semibold mb-2">Movie Recommendation System</h3>
                     <p class="text-gray-600 mb-4">Developed a movie recommendation system using scikit-learn with cosine similarity.</p>
@@ -93,6 +99,12 @@
                 <div class="bg-white p-6 rounded-lg shadow-sm">
                     <h3 class="text-xl font-semibold mb-2">Coffee Shop Customer Segmentation</h3>
                     <p class="text-gray-600 mb-4">Clustered customers using K-Means algorithm with LLM integration.</p>
+                    <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
+                    <span class="inline-block bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-md">AI</span>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-sm">
+                    <h3 class="text-xl font-semibold mb-2">Building a Streamlit Chatbot Integrated with LLM </h3>
+                    <p class="text-gray-600 mb-4">Built a Streamlit chatbot with LLM integration, file upload support, chat history, and export features.</p>                    
                     <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
                     <span class="inline-block bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-md">AI</span>
                 </div>
