--- a/index.html
+++ b/index.html
@@ -86,27 +86,44 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-sm">
                     <h3 class="text-xl font-semibold mb-2">Movie Recommendation System</h3>
-                    <p class="text-gray-600 mb-4">Developed a movie recommendation system using scikit-learn with cosine similarity.</p>
+                    <p class="text-gray-600 mb-4">
+                        Developed a movie recommendation system using scikit-learn with cosine similarity.
+                    </p>
                     <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
                     <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-md">Machine Learning</span>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-sm">
                     <h3 class="text-xl font-semibold mb-2">La Liga Standings Analysis</h3>
-                    <p class="text-gray-600 mb-4">Performed data scraping using BeautifulSoup and visualized with matplotlib.</p>
+                    <p class="text-gray-600 mb-4">
+                        Performed data scraping using BeautifulSoup and visualized with matplotlib.
+                    </p>
                     <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
                     <span class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-md">Data Analysis</span>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-sm">
                     <h3 class="text-xl font-semibold mb-2">Coffee Shop Customer Segmentation</h3>
-                    <p class="text-gray-600 mb-4">Clustered customers using K-Means algorithm with LLM integration.</p>
+                    <p class="text-gray-600 mb-4">
+                        Clustered customers using K-Means algorithm with LLM integration.
+                    </p>
                     <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
                     <span class="inline-block bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-md">AI</span>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-sm">
                     <h3 class="text-xl font-semibold mb-2">Building a Streamlit Chatbot Integrated with LLM </h3>
-                    <p class="text-gray-600 mb-4">Built a Streamlit chatbot with LLM integration, file upload support, chat history, and export features.</p>                    
+                    <p class="text-gray-600 mb-4">
+                        Built a Streamlit chatbot with LLM integration, file upload support, chat history, and export features.
+                    </p>                    
                     <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
                     <span class="inline-block bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-md">AI</span>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-sm">
+                    <h3 class="text-xl font-semibold mb-2">Emotion Classification using BiLSTM & GloVe</h3>
+                    <p class="text-gray-600 mb-4">
+                        Developed a deep learning model using BiLSTM and GloVe word embeddings to classify English tweets into six emotions: sadness, joy, love, anger, fear, and surprise.
+                    </p>
+                    <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
+                    <span class="inline-block bg-pink-100 text-pink-800 text-xs px-2 py-1 rounded-md">Deep Learning</span>
+                    <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-md">NLP</span>
                 </div>
             </div>
         </section>
