--- a/index.html
+++ b/index.html
@@ -78,12 +78,89 @@
                 <div class="bg-white p-4 rounded-lg shadow-sm">
                     <h3 class="font-semibold">PostgreSQL</h3>
                 </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Express.js</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Sequelize ORM</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Redis</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">JWT</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Computer Vision</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">OCR (EasyOCR, Tesseract)</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Deep Learning</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">API Integration</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Next.js</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">TypeScript</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Tailwind CSS</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">shadcn/ui</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Radix UI</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">Lucide React</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">C++</h3>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-sm">
+                    <h3 class="font-semibold">esptool</h3>
+                </div>
             </div>
         </section>
 
         <section id="projects" class="mb-20">
             <h2 class="text-2xl font-bold text-gray-800 mb-6">Featured Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-8">
+                <div class="bg-white p-6 rounded-lg shadow-sm">
+                    <h3 class="text-xl font-semibold mb-2">E-Parking Smart Management System</h3>
+                    <p class="text-gray-600 mb-4">
+                        Developed a smart parking management system with license plate recognition using Computer Vision and OCR.
+                    </p>
+                    <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Node.js</span>
+                    <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-md">Express.js</span>
+                    <span class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-md">PostgreSQL</span>
+                    <span class="inline-block bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-md">Computer Vision</span>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-sm">
+                    <h3 class="text-xl font-semibold mb-2">Water Meter Management System</h3>
+                    <p class="text-gray-600 mb-4">
+                        Built a comprehensive water meter management system for regional utility with role-based dashboards.
+                    </p>
+                    <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Next.js</span>
+                    <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-md">TypeScript</span>
+                    <span class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-md">Tailwind CSS</span>
+                    <span class="inline-block bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-md">shadcn/ui</span>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-sm">
+                    <h3 class="text-xl font-semibold mb-2">IoT Device Reprogramming</h3>
+                    <p class="text-gray-600 mb-4">
+                        Reprogrammed Sonoff WiFi Switch R2 for offline functionality and improved reliability.
+                    </p>
+                    <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">C++</span>
+                    <span class="inline-block bg-green-100 text-green-800 text-xs px-2 py-1 rounded-md">esptool</span>
+                    <span class="inline-block bg-purple-100 text-purple-800 text-xs px-2 py-1 rounded-md">IoT</span>
+                </div>
                 <div class="bg-white p-6 rounded-lg shadow-sm">
                     <h3 class="text-xl font-semibold mb-2">Movie Recommendation System</h3>
                     <p class="text-gray-600 mb-4">
@@ -112,7 +189,7 @@
                     <h3 class="text-xl font-semibold mb-2">Building a Streamlit Chatbot Integrated with LLM </h3>
                     <p class="text-gray-600 mb-4">
                         Built a Streamlit chatbot with LLM integration, file upload support, chat history, and export features.
-                    </p>                    
+                    </p>
                     <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-md">Python</span>
                     <span class="inline-block bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-md">AI</span>
                 </div>
